[package]
name = "gitfeet"
version = "0.1.0"
authors = ["Florian \"sp1rit\"​ <sp1rit@disroot.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "A Atom feed generator for vueBlog compatible repositories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
anyhow = "1.0"
pulldown-cmark = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2"
